# HashPassC

./: Base64Decode.c  Base64Decode.h  Base64Encode.c  Base64Encode.h  CMakeLists.txt  Config.c  Config.h  CryptoFunctions.c  CryptoFunctions.h  DBFunctions.c  DBFunctions.h  PasswordFunctions.c  PasswordFunctions.h  Phrase.c  Phrase.h  README.md  Salt.c  Salt.h  a.out  hashpass  hashpass.c  hashpassconfig.txt  hashpassdb  test  test.c
test/: phrase_test  phrase_test.c  salt_test  salt_test.c
